@@ -18,8 +18,9 @@
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.video.streamlink-tester</source>
         <size>106257</size>
-        <news>[B]1.2.5[/B] - 03-09-2018
-- Various fixes</news>
+        <news>[B]1.2.6[/B] - 24-11-2018
+- Removed kineskop.tv test plugin
+- Made exception broader when trying to load json object as it may not exist</news>
         <assets>
             <icon>icon.png</icon>
         </assets>
